source/stylesheets/components/_slider.scss
@use "prefix" as *;
@use "colors" as *;

jd-slider {
  --size: 1.625rem;

  display: block;
  position: relative;
  align-self: center;
  width: 100%;
  padding: 0 calc(var(--size)/2);
  color: var(--color-subdued);
  transition: .1s ease color;
  @include user-select(none);

  .scale {
    display: flex;
    gap: .25rem;
    height: .625rem;

    &>div {
      width: 100%;
      height: 100%;
      border-radius: var(--border-radius-0);
      background-color: var(--color-interactive);
    }
  }

  .knob {
    position: absolute;
    top: calc(50% - var(--size)/2);
    left: 0;
    width: var(--size);
    height: var(--size);
    border-radius: 50%;
    background-color: currentColor;
    outline: .25rem solid var(--color-foreground);
    transition: .2s ease translate;
    will-change: transform;
  }
  &.held .knob { transition: none; }
}
jd-slider+input { flex-basis: 33%; }

@include lightmode {
  jd-slider.positive .knob { background-color: var(--color-positive); }
  jd-slider.negative .knob { background-color: var(--color-negative); }
}

